--- a/styles/landing.module.scss
+++ b/styles/landing.module.scss
@@ -15,7 +15,7 @@
     display: none;
 }
 
-@media screen and (max-width:breakpoints.$screen-sm-max) {
+@media screen and (max-width:breakpoints.$screen-md-max) {
     .grid_left {
         display: none;
     }
@@ -109,7 +109,7 @@
     }
 }
 
-@media screen and (min-width:breakpoints.$screen-lg-max) {
+@media screen and (min-width:breakpoints.$screen-lg-min) {
     .background {
         position: fixed;
         display:grid;
