--- a/styles/template/subpages_layout.module.scss
+++ b/styles/template/subpages_layout.module.scss
@@ -79,7 +79,7 @@
     }
 }
 
-@media screen and (min-width:breakpoints.$screen-lg-max) {
+@media screen and (min-width:breakpoints.$screen-md-min) {
     .header {
         height: 50vh;
         p {
