--- a/styles/BB.module.scss
+++ b/styles/BB.module.scss
@@ -140,7 +140,7 @@
                 button {
                     font-weight: 700;
                     border: none;
-                    width: 35%;
+                    width: 50%;
                     background: variables.$bb_yellow;
                     border-radius: 10px;
                     padding: 10px;
@@ -184,6 +184,8 @@
 
         .card {
             flex-direction: column;
+            width: 300px !important;
+            height: 390px !important;
             
             .card__body {
                 flex-direction: column;
@@ -202,7 +204,56 @@
                 }
 
                 button {
-                    font-size: 18px;
+                    font-size: 16px;
+                }     
+            }      
+        }
+    }
+}
+
+@media screen and (min-width:breakpoints.$screen-md-min) and (max-width: breakpoints.$screen-md-max) {
+    .header {
+        height: 60vh;
+        .hero_wrapper {
+            margin-left: 15% !important;
+            p {
+                font-size: 46px !important;
+            }
+            .hero__btn {
+                font-size: 16px;
+                padding: 15px 30px;
+            }
+        }
+    }
+
+    .body {
+        flex-direction: row;
+        gap: 10px;
+        margin: 30px 0px;   
+
+        .card {
+            flex-direction: column;
+            width: 300px !important;
+            height: 390px !important;
+            
+            .card__body {
+                flex-direction: column;
+
+                .card__title {
+                    font-size: 24px;
+                }
+
+                .card__description {
+                    height: 60%;
+                    overflow: hidden;
+
+                    p {
+                        font-size: 18px;
+                    }
+                }
+
+                button {
+                    font-size: 16px;
                 }     
             }      
         }
@@ -210,7 +261,7 @@
 }
 
 
-@media screen and (min-width:breakpoints.$screen-lg-max) {
+@media screen and (min-width:breakpoints.$screen-lg-min) {
 
     .header {
         height: 95vh;
