--- a/styles/landing.module.scss
+++ b/styles/landing.module.scss
@@ -60,13 +60,7 @@
             }
             
             .dot {
-                width: 50px;
-                height: 50px;
-                background-color: variables.$grey;
-                border-radius: 50%;
-                position: absolute;
-                bottom: 50%;
-                transition: 0.3s ease-out;
+                display: none;
             }
         }
 
@@ -97,13 +91,7 @@
             }
               
             .dot {
-                width: 50px;
-                height: 50px;
-                background-color: variables.$bb_black;
-                border-radius: 50%;
-                position: absolute;
-                top: 50%;
-                transition: 0.3s ease-out;
+                display: none;
             }
         }
     }
