--- a/styles/landing.module.scss
+++ b/styles/landing.module.scss
@@ -42,6 +42,7 @@
             justify-content: center;
             align-items: center;
             height: 50vh;
+            min-height: 400px;
 
             a {
                 text-decoration: none !important;
@@ -73,6 +74,7 @@
             justify-content: center;
             align-items: center;
             height: 50vh;
+            min-height: 400px;
 
             a {
                 text-decoration: none !important;
