--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,10 @@ html, body {
     display: none;
 }
 
+.emptyblock {
+    height: 46px;
+}
+
 @media screen and (max-width:breakpoints.$screen-md-max) {
     nav {
         background: variables.$bb_yellow;
