--- a/styles/subpages/aboutUs.module.scss
+++ b/styles/subpages/aboutUs.module.scss
@@ -50,15 +50,16 @@
 
 @media screen and (max-width:breakpoints.$screen-sm-max) {
     .header__title {
-        width: 80% !important;
+        width: 460px !important;
     }
 
     .body {
         .body__list {
             flex-direction: column;
             height: 100vh;
+            min-height: 500px;
             .body__img{
-                height: 100%;
+                height: 50%;
             }
         }
     }
