--- a/styles/template/subpages_layout.module.scss
+++ b/styles/template/subpages_layout.module.scss
@@ -62,6 +62,7 @@
 @media screen and (max-width:breakpoints.$screen-sm-max) {
     .header {
         height: 35vh;
+        min-height: 200px;
         .header__title {
             p:nth-child(odd){
                 -webkit-text-stroke-width: 2px !important;
