--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -68,6 +68,7 @@ html, body {
             gap: 20px;
             width: 100%;
             height: 80%;
+            min-height: 320px;
             display: flex;
             flex-direction: column;
             background-color: variables.$bb_black;
